# lem-ipc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  fight.sh  spawn_team.sh
cmd/: game.c  game.h  lemipc.h  main.c  msgq.c  shmem.c  signals.c  ui.c  ui.h  utils.c
pkg/ft_error/: ft_error.h  log_error.c
